--- a/blog/package.json
+++ b/blog/package.json
@@ -12,12 +12,15 @@
     "less": "^4.1.2",
     "mysql": "^2.18.1",
     "vue": "^3.0.5",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@types/node": "^16.11.6",
+    "@vicons/ionicons5": "^0.11.0",
     "@vitejs/plugin-vue": "^1.3.0",
     "@vue/compiler-sfc": "^3.0.5",
+    "naive-ui": "^2.20.1",
     "typescript": "^4.3.2",
     "vite": "^2.4.4",
     "vue-tsc": "^0.2.2"
